sutvarkiau buga
kai developinau, puslapiz kazkodel buvo 150% padidintas, tai kai deployinau per vercel, buvo messed up vizualiai, tai pataisiau

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     min-height: 99vh;
     background-image: linear-gradient(to right top, #250da0, #2b34b2, #3851c2, #4b6cd0, #6286db, #5e9ae7, #60adf0, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
     display:flex;
-    font-size:12px;
+    font-size:20px;
     
 }
 
@@ -10,37 +10,37 @@ body {
 
 .calculatorBox {
 
-    padding-top:20px;
-    margin-top:7%;
+    padding-top:40px;
+    margin-top:5%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius:5px;
     color:white;
     display:flex;
-    width:450px;
-    margin-left:20%;
-    height:320px;
+    width:700px;
+    margin-left:22%;
+    height:520px;
     min-width:400px;
     background-color: rgba(19, 7, 86, 0.274);
     
-
+    
 }
 
 .formRow {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     
   }
 
 label {
-    width: 150px; /* Adjust as needed */
+    width: 250px; /* Adjust as needed */
     text-align: right;
-    margin-right: 10px;
+    margin-right: 20px;
   }
   
 input {
-    width:100px;
+    width:200px;
     flex: 1;
-    font-size:12px;
+    font-size:20px;
   }
 
 input[type="number"]:focus, input[type="date"]:focus, input[type="text"]:focus {
@@ -49,15 +49,17 @@ input[type="number"]:focus, input[type="date"]:focus, input[type="text"]:focus {
 
 textarea {
   outline:none;
+  height:200px;
+  font-size: 12px;
 }
 
   .input-long {
-    width: 220px;
+    width: 320px;
   }
   
   .input-short {
-    width: 100px;
-    max-width:100px;
+    width: 200px;
+    max-width:200px;
   }
 
 
@@ -75,7 +77,7 @@ textarea {
     resize:none;
     overflow:scroll;
     min-width:30%;
-    font-size: 8px;
+    min-height:90px;
   
 }
 
@@ -83,12 +85,12 @@ input[type="submit"] {
   background-color:rgb(43, 139, 234);
   color:white;
   align-content: center;
-  margin-left:34%;
+  margin-left:41%;
   border:none;
   border-radius:5px;
   width:200px;
-  height:30px;
-  margin-top:10px;
+  height:50px;
+  margin-top:20px;
   text-transform:capitalize;
   letter-spacing:2px;
   font-family:Arial, Helvetica, sans-serif;
